# voico_backend_task

./: .gitignore  AGENTS.md  Makefile  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  time.py
backend/app/database/alembic/versions/: 0002_add_notes.py  0003_add_filter_indexes.py
backend/app/modules/calls/: enrichment.py  repository.py  router.py  schema.py  security.py  service.py  tasks.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_call_notes.py  test_config.py  test_cors.py  test_expiry.py  test_filtering.py  test_internals.py  test_migrations.py  test_openai_enricher.py  test_properties.py  test_response_contract.py  test_scheduler.py  test_security.py  test_smoke.py  test_time.py  test_webhook.py
backend/tests/fixtures/: openai_chat_completion.json
docs/: ENGINEERING.md  README.md
docs/adr/: 0000-engineering-method.md  0001-docker-ci-foundations.md  0002-cors-and-security-baseline.md  0003-call-notes.md  0004-filtering-and-search.md  0005-stale-call-auto-expiry.md  0006-test-architecture.md  0007-webhook-ai-integration.md  _TEMPLATE.md
docs/api/: openapi.json
frontend/: .dockerignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
frontend/src/: test-utils.tsx
frontend/src/lib/: useDebouncedExcept.ts
frontend/src/modules/calls/: CallDetailDrawer.tsx  CallsFilterBar.tsx  CallsPage.tsx  CallsTable.tsx  callsUrlState.ts
frontend/src/modules/calls/__tests__/: CallDetailDrawer.test.tsx  CallsFilterBar.test.tsx  CallsPage.filters.test.tsx  CallsPage.states.test.tsx  CallsTable.render.test.tsx  CallsTable.sort.test.tsx  NotesSection.test.tsx  StatusBadge.test.tsx  callsUrlState.test.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/test/msw/: handlers.ts
frontend/src/types/: calls.ts
