[project]
name = "voico-calls-backend"
version = "0.1.0"
description = "Voico Calls Dashboard - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
    "greenlet>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
    "hypothesis>=6.100.0",
    "mutmut>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=100"
markers = [
    "unit: fast, isolated logic (no DB, no network)",
    "integration: real ASGI app + real SQLite, no mocks",
    "security: adversarial / hostile-input tests",
    "property: Hypothesis property-based tests over pure functions",
    "contract: public response-shape / OpenAPI contract guards",
]
filterwarnings = [
    # sqlmodel nudges toward exec() for SELECTs; execute() is correct for our bulk UPDATE/DELETE.
    "ignore:(?s).*You probably want to use .session.exec.*:DeprecationWarning",
]

[tool.mutmut]
# Mutation testing — scoped to the core calls logic; run manually via `make mutate` (not in CI).
paths_to_mutate = ["app/modules/calls/"]
tests_dir = ["tests/"]

[tool.coverage.run]
branch = true
# SQLAlchemy's async layer runs through greenlets and the ASGI request path through anyio; without
# these, request-handler code executes untraced and falsely reports as uncovered.
concurrency = ["thread", "greenlet"]
omit = [
    # Migrations run in a subprocess (test_migrations.py) so coverage can't see them; their
    # reversibility/drift is covered there. Exclude from the line-coverage gate.
    "app/database/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
